fix(ui-breadcrumb): vertical alignment
Updates the Breadcrumb component to use flexbox, allowing icons and
other content without breaking vertical alignment.

Tested in Chrome, Firefox, Safari and Edge.

Fixes INSTUI-1543

Test plan:

- Open the Breadcrumb component examples
- Check that all the examples look right, including the one with an icon

Reviewed-on: https://gerrit.instructure.com/164847
Tested-by: Jenkins
Product-Review: Arlo Bryan Guthrie <aguthrie@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-breadcrumb/src/components/Breadcrumb/BreadcrumbLink/styles.css
+++ b/packages/ui-breadcrumb/src/components/Breadcrumb/BreadcrumbLink/styles.css
@@ -1,10 +1,3 @@
-.root {
-  box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-  width: 100%;
-}
-
 .text {
   font-family: var(--fontFamily);
   color: var(--color);
@@ -19,4 +12,3 @@
   text-overflow: ellipsis;
   width: 100%;
 }
-
