--- a/packages/ui-breadcrumb/src/components/Breadcrumb/styles.css
+++ b/packages/ui-breadcrumb/src/components/Breadcrumb/styles.css
@@ -1,6 +1,9 @@
 /* stylelint-disable selector-max-class */
 
 .root {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -8,59 +11,39 @@
 }
 
 .crumb {
-  box-sizing: border-box;
-  display: inline-block;
-  vertical-align: middle;
-  position: relative;
-}
-
-.crumb:last-child {
-  padding-inline-end: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
 }
 
 .separator {
-  box-sizing: border-box;
-  position: absolute;
-  top: 50%;
   color: var(--separatorColor);
 }
 
 .small .crumb {
   font-size: var(--smallFontSize);
-  padding-inline-end: calc(var(--smallSeparatorFontSize) * 2);
-  padding-inline-start: 0;
 
   .separator {
     font-size: var(--smallSeparatorFontSize);
-    offset-inline-end: calc(var(--smallSeparatorFontSize) / 2);
-    offset-inline-start: auto;
-    margin-top: calc(-1 * (var(--smallSeparatorFontSize) / 3));
+    margin: 0 calc(var(--smallSeparatorFontSize) / 2);
   }
 }
 
 .medium .crumb {
   font-size: var(--mediumFontSize);
-  padding-inline-end: calc(var(--mediumSeparatorFontSize) * 2);
-  padding-inline-start: 0;
 
   .separator {
     font-size: var(--mediumSeparatorFontSize);
-    offset-inline-end: calc(var(--mediumSeparatorFontSize) / 2);
-    offset-inline-start: auto;
-    margin-top: calc(-1 * (var(--mediumSeparatorFontSize) / 3));
+    margin: 0 calc(var(--mediumSeparatorFontSize) / 2);
   }
 }
 
 .large .crumb {
   font-size: var(--largeFontSize);
-  padding-inline-end: calc(var(--largeSeparatorFontSize) * 2);
-  padding-inline-start: 0;
 
   .separator {
     font-size: var(--largeSeparatorFontSize);
-    offset-inline-end: calc(var(--largeSeparatorFontSize) / 2);
-    offset-inline-start: auto;
-    margin-top: calc(-1 * (var(--largeSeparatorFontSize) / 3));
+    margin: 0 calc(var(--largeSeparatorFontSize) / 2);
   }
 }
 
